--- a/src/common/less/theme.less
+++ b/src/common/less/theme.less
@@ -1,4 +1,4 @@
-@ant-primary-color: #1890ff; // 全局主色
+@ant-primary-color: #753434; // 全局主色
 @link-color: #1890ff; // 链接色
 @success-color: #52c41a; // 成功色
 @warning-color: #faad14; // 警告色
