--- a/src/components/Layout/components/Header/components/TagsPc/index.less
+++ b/src/components/Layout/components/Header/components/TagsPc/index.less
@@ -1,9 +1,9 @@
 .nav {
   height: 100%;
   overflow: hidden;
+
   .nav-tags {
     position: relative;
-    // flex: 1;
     align-items: start;
     overflow-x: auto;
     overflow-y: hidden;
@@ -22,26 +22,41 @@
       user-select: none;
       white-space: nowrap;
       color: var(--primary-text-color);
-      transition: all var(--transition-duration_dot3);
 
+      &.active,
       &:hover {
-        opacity: 1;
+        .nav-tag-close {
+          opacity: 1;
+          font-size: 12px;
+        }
+      }
+
+      &.active {
+        .nav-tag-close {
+          padding: 2px;
+          //color: #fff;
+
+          &:hover {
+            background-color: @error-color;
+            border-radius: 50px;
+            color: #fff;
+          }
+        }
       }
 
       .nav-tag-close {
-        padding: 2px;
-        margin-left: 3px;
-        cursor: pointer;
+        margin-left: 5px;
+        opacity: 0;
+        font-size: 0;
         transition: all var(--transition-duration_dot3);
 
         &:hover {
-          background-color: @ant-primary-color;
-          border-radius: 50px;
-          color: #fff;
+          color: @error-color;
         }
       }
     }
   }
+
   .nav-tabs-active-box {
     position: absolute;
     z-index: 0;
@@ -67,40 +82,55 @@
     background-color: var(--primary-color);
     color: var(--primary-text-color);
     box-shadow: 1px 0 4px 0 rgba(0, 0, 0, 0.1);
+
     .nav-tags {
       margin-right: 0;
       align-items: center;
+
       .nav-tag-item {
         align-items: center;
         margin-right: 12px;
-        padding: 0 20px;
-        padding-left: 16px;
+        //padding: 0 20px 0 16px;
+        padding: 0 12px;
         height: 28px;
         opacity: 1;
         border-radius: 4px;
         border: 1px solid #e8e8e8;
+
         &:nth-last-of-type(1) {
           margin-right: 0;
         }
-        //   font-weight: bold;
+
         &:hover {
           background-color: var(--primary-bg-color);
         }
+
         &.active {
           color: #fff;
           background-color: @ant-primary-color;
+          .nav-tag-close {
+            color: #fff;
+          }
         }
+
         &.activeClose {
           padding-right: 12px;
         }
+
+        .nav-tag-close {
+          color: #909399;
+        }
       }
     }
+
     .nav-tabs-active-box {
       display: none;
     }
+
     .more {
       margin-left: 12px;
       white-space: nowrap;
+
       .more-txt {
         margin-right: 4px;
       }
