--- a/src/components/Layout/components/Sider/components/SiderMenu/index.less
+++ b/src/components/Layout/components/Sider/components/SiderMenu/index.less
@@ -4,10 +4,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  // box-sizing: border-box;
   padding: 10px;
-  // background: #fff;
   overflow: hidden;
+  min-height: 50px;
 }
 
 .i-menu-content {
