--- a/src/components/Layout/components/Header/components/TagsPc/index.less
+++ b/src/components/Layout/components/Header/components/TagsPc/index.less
@@ -5,8 +5,6 @@
   .nav-tags {
     position: relative;
     align-items: start;
-    overflow-x: auto;
-    overflow-y: hidden;
     margin-right: 16px;
 
     .nav-tag-item {
@@ -23,13 +21,13 @@
       white-space: nowrap;
       color: var(--primary-text-color);
 
-      &.active,
-      &:hover {
-        .nav-tag-close {
-          opacity: 1;
-          font-size: 12px;
-        }
-      }
+      //&.active,
+      //&:hover {
+      //  .nav-tag-close {
+      //    opacity: 1;
+      //    font-size: 12px;
+      //  }
+      //}
 
       &.active {
         .nav-tag-close {
@@ -46,13 +44,21 @@
 
       .nav-tag-close {
         margin-left: 5px;
-        opacity: 0;
-        font-size: 0;
+        font-size: 12px;
         transition: all var(--transition-duration_dot3);
 
         &:hover {
           color: @error-color;
         }
+      }
+
+      .fade-enter-active, .fade-leave-active {
+        transition: all 0.3s;
+      }
+
+      .fade-enter-from, .fade-leave-to /* .fade-leave-active in <2.1.8 */ {
+        opacity: 0;
+        font-size: 0;
       }
     }
   }
@@ -108,6 +114,7 @@
         &.active {
           color: #fff;
           background-color: @ant-primary-color;
+
           .nav-tag-close {
             color: #fff;
           }
