feat: 新增 数据库配置 界面

--- a/src/common/css/ant.css
+++ b/src/common/css/ant.css
@@ -401,7 +401,7 @@ div.ant-tabs-top > .ant-tabs-nav::before, .ant-tabs-bottom > .ant-tabs-nav::befo
     margin-bottom: 8px;
   }
 
-  .ant-form-item .ant-form-item-label {
+  div.ant-form-item .ant-form-item-label {
     padding-bottom: 0;
   }
 }
