--- a/src/common/css/style.css
+++ b/src/common/css/style.css
@@ -370,9 +370,7 @@ button.drop-row-btn {
 .img_placeholder {
   overflow: hidden;
   height: 0;
-  padding-bottom: var(
-          --img-placeholder-rate
-  ); /** 其中*处填 图片的高宽百分比=高/宽*100% */
+  padding-bottom: var(--img-placeholder-rate); /** 其中*处填 图片的高宽百分比=高/宽*100% */
 }
 
 /* 移动端 */
