--- a/src/views/Login/index.less
+++ b/src/views/Login/index.less
@@ -7,7 +7,7 @@
 
 .bubble {
   overflow: hidden;
-  background: url("../../assets/images/bg.jpg") repeat;
+  background: url("@/assets/images/bg.jpg") repeat;
 }
 
 .form-item-icon {
