--- a/src/components/IComponents/IUpload/index.less
+++ b/src/components/IComponents/IUpload/index.less
@@ -28,8 +28,8 @@
 
         &:hover {
           cursor: pointer;
-          color: @ant-primary-color;
-          border-color: @ant-primary-color;
+          color: @primary-color;
+          border-color: @primary-color;
         }
       }
 
@@ -37,7 +37,7 @@
         .i-upload-icon,
         .i-upload-text {
           opacity: 1;
-          color: @ant-primary-color;
+          color: @primary-color;
         }
       }
     }
