--- a/src/components/Layout/components/Header/components/NavInfo/index.less
+++ b/src/components/Layout/components/Header/components/NavInfo/index.less
@@ -1,12 +1,13 @@
-.admin-info {
+.admin-info-base {
   box-sizing: border-box;
   padding: 0 10px;
   user-select: none;
   height: 100%;
   cursor: pointer;
+  text-align: center;
 
   &:hover {
-    background: var(--primary-bg-color);
+    background-color: @colorBgContainer;
   }
 
   .admin-name {
