--- a/src/components/Layout/components/Sider/components/SiderMenu/index.less
+++ b/src/components/Layout/components/Sider/components/SiderMenu/index.less
@@ -11,6 +11,7 @@
 
 .i-menu-content {
   overflow: auto;
+  height: calc(100vh - 82px);
 }
 
 .logo-img {
@@ -20,11 +21,6 @@
 .logo-name {
   flex-grow: 1;
   justify-content: center;
-}
-
-.logo-name,
-.menu-icon {
-  color: var(--primary-text-color);
 }
 
 .website-name {
