--- a/src/assets/styles/css/style.css
+++ b/src/assets/styles/css/style.css
@@ -31,13 +31,12 @@
 html,
 body,
 #app {
-  width: 100%;
-  height: 100%;
-  background-color: var(--bgColor) !important;
+  /*background-color: var(--bgColor) !important;*/
   font-size: 14px;
   font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB,
   Microsoft YaHei, SimSun, sans-serif;
   /* background-color: var(--primary-bg-color); */
+  background-color: #f0f2f5;
 }
 
 /*里面的代码可以根据自己需求去进行更改*/
