--- a/src/components/Layout/index.less
+++ b/src/components/Layout/index.less
@@ -3,7 +3,7 @@
   width: 100%;
   height: 100%;
   min-height: 100%;
-  background-color: var(--primary-bg-color);
+  background-color: @colorBgLayoutContainer;
 
   .layout {
     box-sizing: border-box;
@@ -22,7 +22,6 @@
       z-index: 10;
       box-sizing: border-box;
       padding: 1rem !important;
-      background-color: var(--bgColor);
     }
 
     .layout-view {
